--- a/cpt-scr/package.json
+++ b/cpt-scr/package.json
@@ -3,15 +3,23 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@date-io/date-fns": "^2.14.0",
+        "@date-io/dayjs": "^2.14.0",
+        "@date-io/luxon": "^2.14.0",
+        "@date-io/moment": "^2.14.0",
         "@emotion/react": "^11.9.3",
         "@emotion/styled": "^11.9.3",
+        "@material-ui/core": "^5.0.0-beta.5",
+        "@material-ui/lab": "^5.0.0-alpha.44",
         "@mui/icons-material": "^5.8.4",
         "@mui/material": "^5.8.4",
+        "@mui/x-date-pickers": "^5.0.0-alpha.7",
         "@reduxjs/toolkit": "^1.8.2",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^13.5.0",
         "axios": "^0.26.1",
+        "date-fns": "^2.28.0",
         "jsonwebtoken": "^8.5.1",
         "jwt-decode": "^3.1.2",
         "moment": "^2.29.3",
