--- a/server/package.json
+++ b/server/package.json
@@ -5,15 +5,18 @@
     "main": "src/index.js",
     "type": "module",
     "dependencies": {
-        "bcrypt": "5.0.1",
+        "aes-js": "^3.1.2",
         "cors": "2.8.5",
+        "cryptico": "^1.0.2",
         "ddos": "^0.2.1",
         "dotenv": "10.0.0",
         "express": "4.17.1",
+        "js-sha256": "^0.9.0",
         "jsonwebtoken": "8.5.1",
         "mongoose": "6.0.7",
         "multer": "^1.4.4",
         "nodemon": "2.0.12",
+        "salted-sha256": "^1.0.0",
         "socket.io": "^4.4.1",
         "stream": "0.0.2",
         "uuid": "^8.3.2",
