--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,8 @@
     "dependencies": {
         "bcrypt": "5.0.1",
         "cors": "2.8.5",
+        "cryptico": "^1.0.2",
+        "cryptify": "^4.1.2",
         "ddos": "^0.2.1",
         "dotenv": "10.0.0",
         "express": "4.17.1",
@@ -14,6 +16,8 @@
         "mongoose": "6.0.7",
         "multer": "^1.4.4",
         "nodemon": "2.0.12",
+        "randomstring": "^1.2.2",
+        "salted-sha256": "^1.0.0",
         "socket.io": "^4.4.1",
         "stream": "0.0.2",
         "uuid": "^8.3.2",
